# sidcoin

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: constants.h  sidcoin.h  sidcoin_constants.h
include/block/: block.h
include/crypto/: ecdsa.h  sha256.h
include/mining/: mining.h
include/transaction/: transaction.h  transaction_input.h  transaction_output.h
include/utilities/: miscellaneous.h  timestamps.h
include/validation/: validation.h
src/: main.cpp  sidcoin.cpp
src/assets/: test_block.json  test_tx.json
src/block/: block.cpp
src/crypto/: ecdsa.cpp  sha256.cpp
src/mining/: mining.cpp
src/transaction/: transaction.cpp  transaction_input.cpp  transaction_output.cpp
src/utilities/: miscellaneous.cpp  timestamps.cpp
src/validation/: validation.cpp
